--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=465
 SMTP_SECURE=true
 SMTP_USER=mariammanasa1@gmail.com
-SMTP_PASS=objzljdlzvugschs   
+SMTP_PASS= objzljdlzvugschs
 CONTACT_EMAIL=mariammanasa1@gmail.com
